--- a/review.html
+++ b/review.html
@@ -5,12 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Plato - Add a Review</title>
   <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
     <h1>Plato</h1>
     <nav>
-      <a href="index.html">Recent Activity</a>
+      <a href="index.html">Back to Recent Activity</a>
     </nav>
   </header>
 
